--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<link rel="stylesheet" type="text/css" href="css/dialog.css"/>
 	<script src="js/dialog.js"></script>
 	<title>Document</title>
 </head>
@@ -14,7 +15,9 @@
 	window.onload = function(){
 		var btn = document.querySelector(".btn-dialog");
 		btn.onclick=function(){
-			dialog.alert({})
+			dialog.open({
+				title:["提示",'height:40px;line-height: 40px;background:#3fcdef;font-size:13px;color:#444;text-indent: 12px;']
+			})
 		}
 	}
 	
